// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`theme settings in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#FAFAF8",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#2C2C28",
            "fontSize": 24,
            "fontWeight": "500",
          }
        }
      >
        Theme
      </Text>
      <Text
        style={
          {
            "color": "#8C8C85",
            "fontSize": 14,
            "marginBottom": 12,
          }
        }
      >
        Use system to follow your device dark or light setting.
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 12,
          }
        }
      >
        <View
          accessibilityLabel="Use System theme"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "gap": 8,
                "padding": 14,
              },
              {
                "backgroundColor": "#FAFAF8",
                "borderColor": "#F0F0ED",
                "borderRadius": 22,
                "borderWidth": 1,
                "minHeight": 48,
                "width": "100%",
              },
            ]
          }
          testID="theme-card-system"
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#4BAE8A",
                    "borderRadius": 10,
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#F5A623",
                    "borderRadius": 10,
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#FAFAF8",
                    "borderColor": "#F0F0ED",
                    "borderRadius": 10,
                    "borderWidth": 1,
                  },
                ]
              }
            />
          </View>
          <Text
            style={
              {
                "color": "#2C2C28",
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            System
          </Text>
          <Text
            style={
              {
                "color": "#8C8C85",
                "fontSize": 12,
              }
            }
          >
            Device light
          </Text>
        </View>
        <View
          accessibilityLabel="Use Light theme"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "gap": 8,
                "padding": 14,
              },
              {
                "backgroundColor": "#FAFAF8",
                "borderColor": "#4BAE8A",
                "borderRadius": 22,
                "borderWidth": 2,
                "flexBasis": 0,
                "flexGrow": 1,
                "minHeight": 48,
              },
            ]
          }
          testID="theme-card-expyrico"
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#4BAE8A",
                    "borderRadius": 10,
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#F5A623",
                    "borderRadius": 10,
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#FAFAF8",
                    "borderColor": "#F0F0ED",
                    "borderRadius": 10,
                    "borderWidth": 1,
                  },
                ]
              }
            />
          </View>
          <Text
            style={
              {
                "color": "#2C2C28",
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            Light
          </Text>
          <Text
            style={
              {
                "color": "#8C8C85",
                "fontSize": 12,
              }
            }
          >
            Light appearance
          </Text>
        </View>
        <View
          accessibilityLabel="Use Dark theme"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "gap": 8,
                "padding": 14,
              },
              {
                "backgroundColor": "#111512",
                "borderColor": "#2D3A34",
                "borderRadius": 22,
                "borderWidth": 1,
                "flexBasis": 0,
                "flexGrow": 1,
                "minHeight": 48,
              },
            ]
          }
          testID="theme-card-expyricoDark"
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#4BAE8A",
                    "borderRadius": 10,
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#F5A623",
                    "borderRadius": 10,
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#191F1B",
                    "borderColor": "#2D3A34",
                    "borderRadius": 10,
                    "borderWidth": 1,
                  },
                ]
              }
            />
          </View>
          <Text
            style={
              {
                "color": "#FAFAF8",
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            Dark
          </Text>
          <Text
            style={
              {
                "color": "#B7BDB7",
                "fontSize": 12,
              }
            }
          >
            Dark appearance
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`theme settings in expyricoDark snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#111512",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#FAFAF8",
            "fontSize": 24,
            "fontWeight": "500",
          }
        }
      >
        Theme
      </Text>
      <Text
        style={
          {
            "color": "#B7BDB7",
            "fontSize": 14,
            "marginBottom": 12,
          }
        }
      >
        Use system to follow your device dark or light setting.
      </Text>
      <View
        style={
          {
            "flexDirection": "row",
            "flexWrap": "wrap",
            "gap": 12,
          }
        }
      >
        <View
          accessibilityLabel="Use System theme"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "gap": 8,
                "padding": 14,
              },
              {
                "backgroundColor": "#111512",
                "borderColor": "#2D3A34",
                "borderRadius": 22,
                "borderWidth": 1,
                "minHeight": 48,
                "width": "100%",
              },
            ]
          }
          testID="theme-card-system"
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#4BAE8A",
                    "borderRadius": 10,
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#F5A623",
                    "borderRadius": 10,
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#191F1B",
                    "borderColor": "#2D3A34",
                    "borderRadius": 10,
                    "borderWidth": 1,
                  },
                ]
              }
            />
          </View>
          <Text
            style={
              {
                "color": "#FAFAF8",
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            System
          </Text>
          <Text
            style={
              {
                "color": "#B7BDB7",
                "fontSize": 12,
              }
            }
          >
            Device dark
          </Text>
        </View>
        <View
          accessibilityLabel="Use Light theme"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "gap": 8,
                "padding": 14,
              },
              {
                "backgroundColor": "#FAFAF8",
                "borderColor": "#F0F0ED",
                "borderRadius": 22,
                "borderWidth": 1,
                "flexBasis": 0,
                "flexGrow": 1,
                "minHeight": 48,
              },
            ]
          }
          testID="theme-card-expyrico"
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#4BAE8A",
                    "borderRadius": 10,
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#F5A623",
                    "borderRadius": 10,
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#FAFAF8",
                    "borderColor": "#F0F0ED",
                    "borderRadius": 10,
                    "borderWidth": 1,
                  },
                ]
              }
            />
          </View>
          <Text
            style={
              {
                "color": "#2C2C28",
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            Light
          </Text>
          <Text
            style={
              {
                "color": "#8C8C85",
                "fontSize": 12,
              }
            }
          >
            Light appearance
          </Text>
        </View>
        <View
          accessibilityLabel="Use Dark theme"
          accessibilityRole="radio"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "gap": 8,
                "padding": 14,
              },
              {
                "backgroundColor": "#111512",
                "borderColor": "#4BAE8A",
                "borderRadius": 22,
                "borderWidth": 2,
                "flexBasis": 0,
                "flexGrow": 1,
                "minHeight": 48,
              },
            ]
          }
          testID="theme-card-expyricoDark"
        >
          <View
            style={
              {
                "flexDirection": "row",
                "gap": 6,
              }
            }
          >
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#4BAE8A",
                    "borderRadius": 10,
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#F5A623",
                    "borderRadius": 10,
                  },
                ]
              }
            />
            <View
              style={
                [
                  {
                    "height": 22,
                    "width": 22,
                  },
                  {
                    "backgroundColor": "#191F1B",
                    "borderColor": "#2D3A34",
                    "borderRadius": 10,
                    "borderWidth": 1,
                  },
                ]
              }
            />
          </View>
          <Text
            style={
              {
                "color": "#FAFAF8",
                "fontSize": 16,
                "fontWeight": "500",
              }
            }
          >
            Dark
          </Text>
          <Text
            style={
              {
                "color": "#B7BDB7",
                "fontSize": 12,
              }
            }
          >
            Dark appearance
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
